provisioning/stream/kubernetes/templates/storage/statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: stream-storage
  namespace: $NAMESPACE
  labels:
    app: stream-storage
    releaseId: $RELEASE_ID
spec:
  serviceName: "stream-storage"
  replicas: $STREAM_STORAGE_REPLICAS
  selector:
    matchLabels:
      app: stream-storage
  template:
    metadata:
      labels:
        app: stream-storage
        releaseId: $RELEASE_ID
        stream-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "stream"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/stream-storage.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9000/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
      terminationGracePeriodSeconds: 600
      containers:
        - name: stream-disk-writer
          image: $STREAM_IMAGE_REPOSITORY:$STREAM_IMAGE_TAG
          command: [ "/app/service" ]
          args: [ "--config-file", "/stream/config/config.yaml", "disk-writer" ] # run disk writer component
          resources:
            # Note: Update also soft GOMEMLIMIT bellow
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 9000 # metrics
          volumeMounts:
            - name: config
              mountPath: /stream/config
              readOnly: true
            - name: ssd-001
              mountPath: /stream/volumes/ssd/ssd-001
      volumes:
        - name: config
          configMap:
            name: stream
            items:
              - key: config.yaml
                path: config.yaml
      nodeSelector:
        nodepool: main
  volumeClaimTemplates:
    - metadata:
        name: ssd-001
      spec:
        accessModes: [ "ReadWriteOnce" ]
        #storageClassName: "my-storage-class"
        resources:
          requests:
            storage: 10Gi
